--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <div class="logo-icon">VT</div>
-                    <div class="logo-text">
-                        <span class="logo-main">BATTERIES</span>
-                        <span class="logo-sub">& SOLAR</span>
-                    </div>
+                    <div class="logo-icon"><img src="logo.png"></div>
+            
                 </div>
     
                 <ul class="nav-menu">
