--- a/index.html
+++ b/index.html
@@ -265,6 +265,22 @@
     </div>
 </footer>
 
+
+    
+<!--Contact-Widgets-->
+<div class="fixed-widgets">
+    <a href="https://wa.me/27632758689" target="_blank" class="whatsapp-widget">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
+</div>
+<!--Contact-Widgets-->
+
+
+
+
+
+
 </body>
 <script src="scripts.js"></script>
 </html>
